<?xml version="1.0" encoding="UTF-8"?>
<!--
        Copyright 2008-2009 The Kuali Foundation Licensed under the
        Educational Community License, Version 2.0 (the "License"); you may
        not use this file except in compliance with the License. You may
        obtain a copy of the License at
        http://www.opensource.org/licenses/ecl2.php Unless required by
        applicable law or agreed to in writing, software distributed under the
        License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
        CONDITIONS OF ANY KIND, either express or implied. See the License for
        the specific language governing permissions and limitations under the
        License.
    -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.kuali.kpme</groupId>
    <artifactId>time-and-attendance</artifactId>
    <packaging>war</packaging>
    <name>KPME Time and Attendance</name>
    <description>KPME Time and Attendance</description>
 	<url>http://kuali.org/kpme</url>
	<organization>
		<name>The Kuali Foundation</name>
		<url>http://kuali.org</url>
	</organization>

   <version>1.1-SNAPSHOT</version>

    <licenses>
		<license>
			<name>The Kuali Foundation Educational Community License 2.0</name>
			<url>http://www.opensource.org/licenses/ecl2.txt</url>
			<distribution>manual</distribution>
		</license>
	</licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<surefire.plugin.version>2.9</surefire.plugin.version>
        <maven.compiler.version>2.3.2</maven.compiler.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>6.1.25</version>
        </dependency>
        <dependency>
            <groupId>org.kuali.rice</groupId>
            <artifactId>rice-api</artifactId>
            <version>1.0.3</version>
            <exclusions>
                <exclusion>
                    <groupId>htmlunit</groupId>
                    <artifactId>htmlunit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kuali.rice</groupId>
            <artifactId>rice-impl</artifactId>
            <version>1.0.3</version>
            <exclusions>
                <exclusion>
                    <groupId>htmlunit</groupId>
                    <artifactId>htmlunit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.5</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>2.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-mock</artifactId>
            <version>2.0.8</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>com.thoughtworks.xstream</groupId>
            <artifactId>xstream</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.nekohtml</groupId>
            <artifactId>nekohtml</artifactId>
            <version>1.9.14</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>2.0b3</version>
            <!--<scope>test</scope>-->
        </dependency>
        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>selenium-maven-plugin</artifactId>
            <version>2.0</version>
            <type>maven-plugin</type>
            <!--<scope>test</scope>-->
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>p6spy</groupId>
            <artifactId>p6spy</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>displaytag</groupId>
            <artifactId>displaytag</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
      		<groupId>com.google.code.gson</groupId>
      		<artifactId>gson</artifactId>
      		<version>1.7.1</version>
      		<scope>compile</scope>
    	</dependency>
        <dependency>
            <groupId>displaytag</groupId>
            <artifactId>displaytag-export-poi</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>10.0.1</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>liquibase.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>2.0.5</version>
                <configuration>
                    <changeLogFile>src/main/resources/db.changelog.xml</changeLogFile>
                    <propertyFile>target/classes/liquibase.properties</propertyFile>
                </configuration>
                <executions>
	                <execution>
	                    <phase>process-resources</phase>
	                    <goals>
	                        <goal>update</goal>
	                    </goals>
	                </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
                </configuration>
                <executions>
                    <execution>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <skip>false</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <projectNameTemplate>[artifactId]-[version]</projectNameTemplate>
                    <wtpmanifest>true</wtpmanifest>
                    <wtpapplicationxml>true</wtpapplicationxml>
                    <wtpversion>2.0</wtpversion>
                    <wtpContextName>tk-dev</wtpContextName>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1-alpha-2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.0</version>
                <configuration>
                    <tagBase>https://svn.kuali.org/repos/kpme/tags</tagBase>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>kpme-main</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>   
		        <dataSource.driver>com.mysql.jdbc.Driver</dataSource.driver>
		        <dataSource.jdbcUrl>jdbc:mysql://localhost:3306/</dataSource.jdbcUrl>
		        <dataSource.database>tk</dataSource.database>
		        <dataSource.username>tk</dataSource.username>
		        <dataSource.password>tk_tk_tk</dataSource.password>
		        
		        <liquibase.verbose>true</liquibase.verbose>
		        <liquibase.dropFirst>false</liquibase.dropFirst>
		        <liquibase.contexts>bootstrap,staging</liquibase.contexts>
            </properties>
        </profile>
        <profile>
            <id>kpme-test</id>
            <properties>
                <dataSource.driver>com.mysql.jdbc.Driver</dataSource.driver>
                <dataSource.jdbcUrl>jdbc:mysql://localhost:3306/</dataSource.jdbcUrl>
                <dataSource.database>tk-test</dataSource.database>
                <dataSource.username>tk</dataSource.username>
                <dataSource.password>tk_tk_tk</dataSource.password>
                
                <liquibase.verbose>true</liquibase.verbose>
                <liquibase.dropFirst>true</liquibase.dropFirst>
                <liquibase.contexts>bootstrap,test</liquibase.contexts>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>kuali.nexus</id>
            <name>Nexus Repository Manager</name>
            <url>http://nexus.kuali.org/content/groups/public</url>
            <releases>
                    <enabled>true</enabled>
            </releases>
            <snapshots>
                    <enabled>true</enabled>
            </snapshots>
        </repository>
		<repository>
			<id>kuali</id>
			<name>Kuali Repository</name>
			<url>https://test.kuali.org/maven</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
        <repository>
            <id>nexus</id>
            <name>Nexus Repository</name>
            <url>http://nexus.openqa.org/content/repositories/releases</url>
        </repository>
    </repositories>

    <scm>
		<connection>scm:svn:http://svn.kuali.org/repos/kpme/trunk</connection>
		<developerConnection>scm:svn:https://svn.kuali.org/repos/kpme/trunk</developerConnection>
        <url>http://fisheye.kuali.org/browse/kpme</url>
	</scm>

	<issueManagement>
		<system>Jira</system>
		<url>https://test.kuali.org/jira/</url>
	</issueManagement>

</project>